Minor style updates

--- a/AuthApp/Templates/AuthApp/transaction.html
+++ b/AuthApp/Templates/AuthApp/transaction.html
@@ -2,23 +2,31 @@
 {% block content %}
 {% if customer %}
 
-<h1>Make a Deposit:</h1>
+<h1>Make a Deposit or Withdrawal</h1>
+<h3>Customer Info:</h3>
 <ul>
-    <h3>Customer Info:</h3>
     <li> {{ customer.first_name }}
         {{ customer.last_name }}
     </li>
-    <li>Main Balance: {{ customer.main_balance |floatformat:2 }}</li>
-    <li>Emergency Balance: {{ customer.emergency_balance |floatformat:2 }}</li>
-    <hr/>
+    <li>Main Balance: ${{ customer.main_balance |floatformat:2 }}</li>
+    <li>Emergency Balance: ${{ customer.emergency_balance |floatformat:2 }}</li>
 
 </ul>
+<hr/>
 <form method="post">
     {% csrf_token %}
-    <input type="radio" name="trans_acct" value="SAVINGS" checked>Expenses<br/>
-    <input type="radio" name="trans_acct" value="EMERGENCY">Emergency<br/>
-    <input type="radio" name="trans_type" value="DEPOSIT" checked>Deposit<br/>
-    <input type="radio" name="trans_type" value="WITHDRAW">Withdraw<br/>
+    <label>
+        <input type="radio" name="trans_acct" value="SAVINGS" checked>
+    </label>Expenses<br/>
+    <label>
+        <input type="radio" name="trans_acct" value="EMERGENCY">
+    </label>Emergency<br/>
+    <label>
+        <input type="radio" name="trans_type" value="DEPOSIT" checked>
+    </label>Deposit<br/>
+    <label>
+        <input type="radio" name="trans_type" value="WITHDRAW">
+    </label>Withdraw<br/>
     <label for="trans_value">Amount</label>
     <input type="number" id="trans_value" name="trans_value">
     <button type="submit">GO GET IT!</button>
